Jasmine initialized and Jasmine examples added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <div ng-controller="MainCtrl">
         Compass Version: {{version}}
+        <session-detail></session-detail>    
     </div>
+
+    <session-detail></session-detail>
     
 
 </body>
