--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,14 +10,22 @@
   <script src="lib/jasmine-3.1.0/jasmine.js"></script>
   <script src="lib/jasmine-3.1.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.1.0/boot.js"></script>
+  <!-- <script src="lib/require.js" data-main="test-loader.js"></script> -->
+  <script src="lib/require.js"></script>
 
   <!-- include source files here... -->
   <script src="src/Player.js"></script>
   <script src="src/Song.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
+
+  <!-- ReferenceError: 'require' is undefined -->
+  <!-- <script src="spec/SpecHelper.js"></script> -->
+  <!-- So, browserify it -->  
+  <!-- <script src="./spec-bundle.js"></script> --><!-- Load through require.js -->
+  
   <script src="./spec/jasmine_examples/PlayerSpec.js"></script>
+  <!-- <script src="./spec/testSpec.js"></script> -->
 
 </head>
 
