--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,6 +11,7 @@
   <script src="lib/jasmine-3.1.0/jasmine-html.js"></script>
   <script src="lib/jasmine-3.1.0/boot.js"></script>
   <!-- <script src="lib/require.js" data-main="test-loader.js"></script> -->
+  <!-- <script src="./require-config.js"></script> -->
   <script src="lib/require.js"></script>
 
   <!-- include source files here... -->
