--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -25,6 +25,7 @@
   <!-- So, browserify it -->  
   <!-- <script src="./spec-bundle.js"></script> --><!-- Load through require.js -->
   
+  <script src="./spec/helpers/jasmine_examples/SpecHelper.js"></script>
   <script src="./spec/jasmine_examples/PlayerSpec.js"></script>
   <!-- <script src="./spec/testSpec.js"></script> -->
 
