require.js stand alone configuration

--- a/use-requirejs/SpecRunner.html
+++ b/use-requirejs/SpecRunner.html
@@ -14,22 +14,17 @@
 
 
   <!-- <script src="lib/require.js" data-main="test-loader.js"></script> -->
-  <!-- <script src="./require-config.js"></script> -->
   <script src="lib/require.js"></script>
+  <script src="./require-config.js"></script>
+  
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="Player.js"></script>
+  <script src="Song.js"></script>
 
   <!-- include spec files here... -->
 
-  <!-- ReferenceError: 'require' is undefined -->
-  <!-- <script src="spec/SpecHelper.js"></script> -->
-  <!-- So, browserify it -->  
-  <!-- <script src="./spec-bundle.js"></script> --><!-- Load through require.js -->
-  
   <script src="./spec/jasmine_examples/PlayerSpec.js"></script>
-  <!-- <script src="./spec/testSpec.js"></script> -->
 
 </head>
 
