--- a/ng-unit-testing/src/client/index.html
+++ b/ng-unit-testing/src/client/index.html
@@ -73,6 +73,8 @@
   <script src="/src/client/app/core/core.module.js"></script>
   <script src="/src/client/app/dashboard/dashboard.module.js"></script>
   <script src="/src/client/app/layout/layout.module.js"></script>
+  <script src="/src/client/app/people/people.module.js"></script>
+  <script src="/src/client/app/unit/unit.module.js"></script>
   <script src="/src/client/app/widgets/widgets.module.js"></script>
   <script src="/src/client/app/admin/admin.controller.js"></script>
   <script src="/src/client/app/admin/admin.route.js"></script>
@@ -90,6 +92,10 @@
   <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
+  <script src="/src/client/app/people/people.controller.js"></script>
+  <script src="/src/client/app/people/people.route.js"></script>
+  <script src="/src/client/app/unit/admin.route.js"></script>
+  <script src="/src/client/app/unit/unit.controller.js"></script>
   <script src="/src/client/app/widgets/ht-img-person.directive.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
